--- a/4i.html
+++ b/4i.html
@@ -5,12 +5,26 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <style>
+    .yellow {
+      background-color: yellow;
+    }
+    
+    .orange {
+      background-color: orange;
+    }
+    </style>
 </head>
 <body>
 <p>Adults Plain Cotton T-shirt</p>
 <p>Price: $7.99</p>
 <div>
-  <button class="yellow">Add to cart</button> <button class="orange">Buy Now</button>
+  <button class="yellow" onclick="
+    alert('Added')
+    ">Add to cart</button> <button class="orange" onclick="
+    console.log('Loading...')
+    alert('Purchased')
+    ">Buy Now</button>
 </div>
   
 </body>
