Variables lesson done before project start

--- a/05.variables.html
+++ b/05.variables.html
@@ -8,14 +8,26 @@
   
 </head>
 <body>
-  <p>Hello, world!</p>
-  <p>Today I did some JavaScript excercises to pratice my knowledge</p>
-  <button class="yellow">Add to cart</button> <button class="orange">Buy Now</button>  
-</body>
+  <script>
+    let variable1 = 3;
+    console.log(variable1);
 
-<script>
-console.log('Welcome!');
-/* I've been learning JavaScript for about 1 week and a half so far, only console excercises on Google Chrome, but this is my first excercises that I will be pushing to my GitHub. */
-</script>
+    let calculation = 2 + 2;
+    console.log(calculation);
+    console.log(calculation + 2);
+
+    let result = calculation + 2;
+    console.log(result);
+
+    let message = 'hello';
+    console.log(message);
+
+    variable1 = 5;
+    console.log(variable1);
+
+    variable1 = variable1 + 1;
+    console.log(variable1);
+  </script>
+</body>
 </html>
 
