--- a/05-cart-quantity.html
+++ b/05-cart-quantity.html
@@ -13,22 +13,22 @@
     ">Show Quantity</button> 
     
   <button onclick="
-    cartQuantity = cartQuantity + 1;
+    cartQuantity++;
     console.log(`Cart Quantity: ${cartQuantity}`);
     ">Add to Cart</button> 
     
   <button onclick="
-  cartQuantity = cartQuantity + 2;
+  cartQuantity += 2;
   console.log(`Cart Quantity: ${cartQuantity}`);
   ">+2</button>
   
   <button onclick="
-  cartQuantity = cartQuantity + 3;
+  cartQuantity += 3;
   console.log(`Cart Quantity: ${cartQuantity}`);
   ">+3</button>
   
   <button onclick="
-  cartQuantity = cartQuantity - cartQuantity;
+  cartQuantity = 0;
   console.log('Cart was reset.')
   console.log(`Cart Quantity: ${cartQuantity}`);
   ">Reset cart</button>
