--- a/05.variables.html
+++ b/05.variables.html
@@ -27,6 +27,11 @@
 
     variable1 = variable1 + 1;
     console.log(variable1);
+
+    const variable2 = 3;
+
+    var variable3 = 3;
+    
   </script>
 </body>
 </html>
