Variables practice excercise 3

--- a/05-varriables-exercises.html
+++ b/05-varriables-exercises.html
@@ -12,6 +12,9 @@
     const variable1 = 'Jonathan';
     console.log(`My name is: ${variable1}`);
 
+    const cost = 5 + 3 + 3 + 9;
+    console.log(cost);
+
   
 
   </script>
