Variables practice excercise 4

--- a/05-varriables-exercises.html
+++ b/05-varriables-exercises.html
@@ -13,7 +13,7 @@
     console.log(`My name is: ${variable1}`);
 
     const cost = 5 + 3 + 3 + 9;
-    console.log(cost);
+    console.log(`Cost of food: $${cost}`);
 
   
 
