--- a/05-varriables-exercises.html
+++ b/05-varriables-exercises.html
@@ -14,6 +14,10 @@
 
     const cost = 5 + 3 + 3 + 9;
     console.log(`Cost of food: $${cost}`);
+    
+    const tax = cost * 0.1;
+    console.log(tax)
+    console.log(`Tax (10%): $${tax}`)
 
   
 
