Variables practice excercise 6

--- a/05-varriables-exercises.html
+++ b/05-varriables-exercises.html
@@ -19,6 +19,9 @@
     console.log(tax)
     console.log(`Tax (10%): $${tax}`)
 
+    const totalCost = cost + tax;
+    console.log(`Total cost: $${totalCost}`)
+
   
 
   </script>
