Variables practice excercise 7

--- a/05-cart-quantity.html
+++ b/05-cart-quantity.html
@@ -26,6 +26,16 @@
   cartQuantity += 3;
   console.log(`Cart Quantity: ${cartQuantity}`);
   ">+3</button>
+
+<button onclick="
+cartQuantity += 4;
+console.log(`Cart Quantity: ${cartQuantity}`);
+">+4</button>
+
+<button onclick="
+  cartQuantity += 5;
+  console.log(`Cart Quantity: ${cartQuantity}`);
+  ">+5</button>
   
   <button onclick="
   cartQuantity = 0;
