--- a/06-rock-paper-scissors.html
+++ b/06-rock-paper-scissors.html
@@ -10,6 +10,8 @@
   <p>Rock Paper Scissors</p>
   <button onclick="
   const randomNumber = Math.random();
+
+  if (randomNumber >= 0 randomNumber < 1 / 3) {}
   ">Rock</button>
   <button>Paper</button>
   <button>Scissors</button>
