--- a/06-booleans.html
+++ b/06-booleans.html
@@ -9,6 +9,7 @@
 <body>
   
   <script>
+    /*
     true
     false
 
@@ -24,7 +25,10 @@
       console.log('You can drive')
     } else {
       console.log('You can not drive')
-    }
+    } */
+
+    console.log(true && false)
+    console.log(0.2 >= 0 && 0.2 < 1/3)
   </script>
 </body>
 </html>
