--- a/06-rock-paper-scissors.html
+++ b/06-rock-paper-scissors.html
@@ -10,10 +10,18 @@
   <p>Rock Paper Scissors</p>
   <button onclick="
   const randomNumber = Math.random();
+  const computerMove = '';
 
-  if (randomNumber >= 0 randomNumber < 1 / 3) {}
+  
+  if (randomNumber >= 0 && randomNumber < 1/3) {
+    const computerMove = 'Rock'
+  } else if (randomNumber >= 1/3 && randomNumber < 2/3) {
+    const computerMove = 'Paper'
+  } else if (randomNumber >= 2/3 && randomNumber < 1) {
+    const computerMove = 'Scissors'
+  }
   ">Rock</button>
-  <button>Paper</button>
+  <button >Paper</button>
   <button>Scissors</button>
   
   <script>
