--- a/06-rock-paper-scissors.html
+++ b/06-rock-paper-scissors.html
@@ -10,16 +10,30 @@
   <p>Rock Paper Scissors</p>
   <button onclick="
   const randomNumber = Math.random();
-  const computerMove = '';
+  let computerMove = '';
 
   
   if (randomNumber >= 0 && randomNumber < 1/3) {
-    const computerMove = 'Rock'
+     computerMove = 'Rock'
   } else if (randomNumber >= 1/3 && randomNumber < 2/3) {
-    const computerMove = 'Paper'
+     computerMove = 'Paper'
   } else if (randomNumber >= 2/3 && randomNumber < 1) {
-    const computerMove = 'Scissors'
+     computerMove = 'Scissors'
   }
+
+  console.log(computerMove);
+
+  let result = ''; 
+
+  if (computerMove === 'rock') {
+    result = 'Tie.'
+  } else if (computerMove === 'paper') {
+    result = 'You lose.'
+  } else if (computerMove === 'Scissors') {
+    result = 'You win!'
+  }
+
+  alert(`You picked rock. Computer picked ${computerMove}. ${result}`);
   ">Rock</button>
   <button >Paper</button>
   <button>Scissors</button>
