--- a/06-rock-paper-scissors.html
+++ b/06-rock-paper-scissors.html
@@ -11,7 +11,6 @@
   <button onclick="
   const randomNumber = Math.random();
   let computerMove = '';
-
   
   if (randomNumber >= 0 && randomNumber < 1/3) {
      computerMove = 'Rock'
@@ -20,8 +19,6 @@
   } else if (randomNumber >= 2/3 && randomNumber < 1) {
      computerMove = 'Scissors'
   }
-
-  console.log(computerMove);
 
   let result = ''; 
 
@@ -35,8 +32,56 @@
 
   alert(`You picked rock. Computer picked ${computerMove}. ${result}`);
   ">Rock</button>
-  <button >Paper</button>
-  <button>Scissors</button>
+  <button onclick="
+
+randomNumber = Math.random();
+computerMove = '';
+
+    if (randomNumber >= 0 && randomNumber < 1/3) {
+     computerMove = 'rock'
+  } else if (randomNumber >= 1/3 && randomNumber < 2/3) {
+     computerMove = 'Paper'
+  } else if (randomNumber >= 2/3 && randomNumber < 1) {
+     computerMove = 'Scissors'
+  }
+
+result = ''; 
+
+if (computerMove === 'rock') {
+  result = 'You win!'
+} else if (computerMove === 'paper') {
+  result = 'Tie.'
+} else if (computerMove === 'Scissors') {
+  result = 'You lose.'
+}
+
+alert(`You picked paper. Computer picked ${computerMove}. ${result}`);
+  ">Paper</button>
+  <button onclick="
+
+  randomNumber = Math.random();
+  computerMove = '';
+  
+      if (randomNumber >= 0 && randomNumber < 1/3) {
+       computerMove = 'rock'
+    } else if (randomNumber >= 1/3 && randomNumber < 2/3) {
+       computerMove = 'Paper'
+    } else if (randomNumber >= 2/3 && randomNumber < 1) {
+       computerMove = 'Scissors'
+    }
+  
+  result = ''; 
+  
+  if (computerMove === 'rock') {
+    result = 'You win!'
+  } else if (computerMove === 'paper') {
+    result = 'Tie.'
+  } else if (computerMove === 'Scissors') {
+    result = 'You lose.'
+  }
+  
+  alert(`You picked paper. Computer picked ${computerMove}. ${result}`);
+    ">Scissors</button>
   
   <script>
     
