--- a/06-rock-paper-scissors.html
+++ b/06-rock-paper-scissors.html
@@ -13,11 +13,11 @@
   let computerMove = '';
   
   if (randomNumber >= 0 && randomNumber < 1/3) {
-     computerMove = 'Rock'
+     computerMove = 'rock'
   } else if (randomNumber >= 1/3 && randomNumber < 2/3) {
-     computerMove = 'Paper'
+     computerMove = 'paper'
   } else if (randomNumber >= 2/3 && randomNumber < 1) {
-     computerMove = 'Scissors'
+     computerMove = 'scissors'
   }
 
   let result = ''; 
@@ -26,7 +26,7 @@
     result = 'Tie.'
   } else if (computerMove === 'paper') {
     result = 'You lose.'
-  } else if (computerMove === 'Scissors') {
+  } else if (computerMove === 'scissors') {
     result = 'You win!'
   }
 
@@ -40,9 +40,9 @@ computerMove = '';
     if (randomNumber >= 0 && randomNumber < 1/3) {
      computerMove = 'rock'
   } else if (randomNumber >= 1/3 && randomNumber < 2/3) {
-     computerMove = 'Paper'
+     computerMove = 'paper'
   } else if (randomNumber >= 2/3 && randomNumber < 1) {
-     computerMove = 'Scissors'
+     computerMove = 'scissors'
   }
 
 result = ''; 
@@ -51,7 +51,7 @@ if (computerMove === 'rock') {
   result = 'You win!'
 } else if (computerMove === 'paper') {
   result = 'Tie.'
-} else if (computerMove === 'Scissors') {
+} else if (computerMove === 'scissors') {
   result = 'You lose.'
 }
 
@@ -65,22 +65,22 @@ alert(`You picked paper. Computer picked ${computerMove}. ${result}`);
       if (randomNumber >= 0 && randomNumber < 1/3) {
        computerMove = 'rock'
     } else if (randomNumber >= 1/3 && randomNumber < 2/3) {
-       computerMove = 'Paper'
+       computerMove = 'paper'
     } else if (randomNumber >= 2/3 && randomNumber < 1) {
-       computerMove = 'Scissors'
+       computerMove = 'scissors'
     }
   
   result = ''; 
   
   if (computerMove === 'rock') {
-    result = 'You win!'
-  } else if (computerMove === 'paper') {
-    result = 'Tie.'
-  } else if (computerMove === 'Scissors') {
     result = 'You lose.'
+  } else if (computerMove === 'paper') {
+    result = 'You win!'
+  } else if (computerMove === 'scissors') {
+    result = 'Tie.'
   }
   
-  alert(`You picked paper. Computer picked ${computerMove}. ${result}`);
+  alert(`You picked Scissors. Computer picked ${computerMove}. ${result}`);
     ">Scissors</button>
   
   <script>
