excerice  simplification correcrtion

--- a/06-exercises.html
+++ b/06-exercises.html
@@ -16,7 +16,7 @@
       console.log('Good morning!')
     } else if ( hour >= 13 && hour <= 17 ) {
       console.log('Good afternoon!')
-    } else if ( hour >= 18) {
+    } else {
       console.log('Good night!')
     } 
 
