--- a/06-exercises.html
+++ b/06-exercises.html
@@ -11,13 +11,14 @@
 
   <script>
     const hour = 14;
+    const name = 'Jonathan';
 
     if ( hour >= 6 && hour <= 12 ) {
-      console.log('Good morning!')
+      console.log(`Good morning ${name}!`)
     } else if ( hour >= 13 && hour <= 17 ) {
-      console.log('Good afternoon!')
+      console.log(`Good afternoon ${name}!`)
     } else {
-      console.log('Good night!')
+      console.log(`Good night ${name}!`);
     } 
 
   </script>
