--- a/06-exercises.html
+++ b/06-exercises.html
@@ -21,6 +21,14 @@
       console.log(`Good night ${name}!`);
     } 
 
+    const age = 29;
+
+    if (age <= 6 || age >= 65) {
+      console.log(`Discount`)
+    } else {
+      console.log(`No discount`)
+    }
+
   </script>
 </body>
 </html>
