--- a/06-exercises.html
+++ b/06-exercises.html
@@ -21,9 +21,10 @@
       console.log(`Good night ${name}!`);
     } 
 
-    const age = 29;
+    const age = 67;
+    const isHoliday = true;
 
-    if (age <= 6 || age >= 65) {
+    if ((age <= 6 || age >= 65) && !isHoliday) {
       console.log(`Discount`)
     } else {
       console.log(`No discount`)
