--- a/06-exercises.html
+++ b/06-exercises.html
@@ -30,6 +30,23 @@
       console.log(`No discount`)
     }
 
+    const randomNumber = Math.random();
+    let result;
+
+    if (randomNumber > 0.5) {
+      result = 'tails' 
+    } else {
+      result = 'heads'
+    }
+
+    const guess = tails;
+
+      if (guess === result) {
+        console.log('You win!')
+      } else {
+        console.log('You lose!')
+      }
+
   </script>
 </body>
 </html>
