--- a/07-functions.html
+++ b/07-functions.html
@@ -4,31 +4,17 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Booleans</title>
+  <title>Functions</title>
 </head>
 <body>
-  
   <script>
-    /*
-    true
-    false
-
-    console.log(3 > 5)
-
-    if (3 < 5) {
-      console.log('hello')
-    } else {
-      console.log('else')
+    function function1() {
+      console.log('hello');
+      console.log(2 + 2)
     }
 
-    if (30 >= 18) {
-      console.log('You can drive')
-    } else {
-      console.log('You can not drive')
-    } */
-
-    console.log(true && false)
-    console.log(0.2 >= 0 && 0.2 < 1/3)
+    function1();
+    function1();
   </script>
 </body>
 </html>
