Created first function for rockpaperscissors game

--- a/07-rock-paper-scissors copy.html
+++ b/07-rock-paper-scissors copy.html
@@ -85,7 +85,7 @@ alert(`You picked paper. Computer picked ${computerMove}. ${result}`);
     ">Scissors</button>
   
   <script>
-    function
+    function pickComputerMove() {}
   </script>
 </body>
 </html>
