Added code for computer move to the function

--- a/07-rock-paper-scissors copy.html
+++ b/07-rock-paper-scissors copy.html
@@ -33,6 +33,7 @@
 
   alert(`You picked rock. Computer picked ${computerMove}. ${result}`);
   ">Rock</button>
+
   <button onclick="
 
 randomNumber = Math.random();
@@ -58,6 +59,7 @@ if (computerMove === 'rock') {
 
 alert(`You picked paper. Computer picked ${computerMove}. ${result}`);
   ">Paper</button>
+
   <button onclick="
 
   randomNumber = Math.random();
@@ -85,7 +87,16 @@ alert(`You picked paper. Computer picked ${computerMove}. ${result}`);
     ">Scissors</button>
   
   <script>
-    function pickComputerMove() {}
+    function pickComputerMove() {randomNumber = Math.random();
+  computerMove = '';
+  
+      if (randomNumber >= 0 && randomNumber < 1/3) {
+       computerMove = 'rock'
+    } else if (randomNumber >= 1/3 && randomNumber < 2/3) {
+       computerMove = 'paper'
+    } else if (randomNumber >= 2/3 && randomNumber < 1) {
+       computerMove = 'scissors'
+    }}
   </script>
 </body>
 </html>
