--- a/07-rock-paper-scissors copy.html
+++ b/07-rock-paper-scissors copy.html
@@ -9,10 +9,10 @@
 <body>
   <p>Rock Paper Scissors</p>
   <button onclick="
-  const randomNumber = Math.random();
-  let computerMove = '';
+  randomNumber = Math.random();
+  computerMove = '';
   pickComputerMove();
-  let result = ''; 
+  result = ''; 
 
   if (computerMove === 'rock') {
     result = 'Tie.'
@@ -42,10 +42,8 @@ alert(`You picked paper. Computer picked ${computerMove}. ${result}`);
   ">Paper</button>
 
   <button onclick="
-  randomNumber = Math.random();
-  computerMove = '';
-  pickComputerMove(); 
-  result = ''; 
+  const computerMove = pickComputerMove() 
+  let result = ''; 
   
   if (computerMove === 'rock') {
     result = 'You lose.'
@@ -58,8 +56,11 @@ alert(`You picked paper. Computer picked ${computerMove}. ${result}`);
     ">Scissors</button>
 
   <script>
-    function pickComputerMove(){randomNumber = Math.random();
-  computerMove = '';
+    function pickComputerMove(){
+      const randomNumber = Math.random();
+      let computerMove = '';
+
+  
       if (randomNumber >= 0 && randomNumber < 1/3) {
        computerMove = 'rock'
     } else if (randomNumber >= 1/3 && randomNumber < 2/3) {
@@ -67,6 +68,8 @@ alert(`You picked paper. Computer picked ${computerMove}. ${result}`);
     } else if (randomNumber >= 2/3 && randomNumber < 1) {
        computerMove = 'scissors'
     }     
+
+    return computerMove;
   }
   </script>
 </body>
