--- a/07-functions.html
+++ b/07-functions.html
@@ -12,9 +12,17 @@
       console.log('hello');
       console.log(2 + 2)
     }
+/*
+    function1();
+    function1();
+    */ 
 
-    function1();
-    function1();
+    function calculateTax(cost, taxPercent) {
+      console.log(cost * 0.1);
+    }
+
+    calculateTax(2000, 0.2); 
+    calculateTax(5000);
   </script>
 </body>
 </html>
