Parameters second value excercise

--- a/07-functions.html
+++ b/07-functions.html
@@ -17,8 +17,8 @@
     function1();
     */ 
 
-    function calculateTax(cost, taxPercent) {
-      console.log(cost * 0.1);
+    function calculateTax(cost, taxPercent = 0.1) {
+      console.log(cost * taxPercent);
     }
 
     calculateTax(2000, 0.2); 
