Moving JS for move picking to paramaters

--- a/07-rock-paper-scissors copy.html
+++ b/07-rock-paper-scissors copy.html
@@ -14,28 +14,11 @@
   pickComputerMove();
   result = ''; 
 
-  if (computerMove === 'rock') {
-    result = 'Tie.'
-  } else if (computerMove === 'paper') {
-    result = 'You lose.'
-  } else if (computerMove === 'scissors') {
-    result = 'You win!'
-  }
-  alert(`You picked rock. Computer picked ${computerMove}. ${result}`);
+  
   ">Rock</button>
 
   <button onclick="
-    const computerMove = pickComputerMove();
-    let result = ''; 
-
-if (computerMove === 'rock') {
-  result = 'You win!'
-} else if (computerMove === 'paper') {
-  result = 'Tie.'
-} else if (computerMove === 'scissors') {
-  result = 'You lose.'
-}
-alert(`You picked paper. Computer picked ${computerMove}. ${result}`);
+  playgame('paper')
   ">Paper</button>
 
   <button onclick="
@@ -54,6 +37,22 @@ alert(`You picked paper. Computer picked ${computerMove}. ${result}`);
           result = 'You win!'
         } else if (computerMove === 'scissors') {
           result = 'Tie.'
+        }
+      } else if (playerMove === 'paper') {
+          if (computerMove === 'rock') {
+          result = 'You win!'
+        } else if (computerMove === 'paper') {
+          result = 'Tie.'
+        } else if (computerMove === 'scissors') {
+          result = 'You lose.'
+        }
+      } else if (playerMove === 'rock') {
+          if (computerMove === 'rock') {
+          result = 'Tie.'
+        } else if (computerMove === 'paper') {
+          result = 'You lose.'
+        } else if (computerMove === 'scissors') {
+          result = 'You win!'
         }
       }
 
