--- a/07-rock-paper-scissors copy.html
+++ b/07-rock-paper-scissors copy.html
@@ -9,12 +9,7 @@
 <body>
   <p>Rock Paper Scissors</p>
   <button onclick="
-  randomNumber = Math.random();
-  computerMove = '';
-  pickComputerMove();
-  result = ''; 
-
-  
+  playgame('rock')
   ">Rock</button>
 
   <button onclick="
@@ -23,7 +18,6 @@
 
   <button onclick="
   playgame('scissors');
-  
     ">Scissors</button>
 
   <script>
@@ -62,7 +56,6 @@
       const randomNumber = Math.random();
       let computerMove = '';
 
-  
       if (randomNumber >= 0 && randomNumber < 1/3) {
        computerMove = 'rock'
     } else if (randomNumber >= 1/3 && randomNumber < 2/3) {
