7b put name in a parameter and test inserting different values success

--- a/07-challenge-exercise.html
+++ b/07-challenge-exercise.html
@@ -9,11 +9,14 @@
   
 
 <script>
-  function greet(){
-    console.log('Hello!')
-  }
+  function greet(name){
+    console.log(`Hello ${name}`)
+  };
 
-  greet()
+  greet('SteveDurk');
+
+  
+
 </script>
 
 </body>
