--- a/07-challenge-exercise.html
+++ b/07-challenge-exercise.html
@@ -9,11 +9,11 @@
   
 
 <script>
-  function greet(name){
+  function greet(name = 'there'){
     console.log(`Hello ${name}`)
   };
 
-  greet('SteveDurk');
+  greet();
 
   
 
