--- a/07-challenge-exercise.html
+++ b/07-challenge-exercise.html
@@ -15,6 +15,10 @@
 
   greet();
 
+  function convertToFahrenheit(celsius){
+    let fahrenheit = (fahrenheit - 32) * 5 / 9;
+  }
+
   
 
 </script>
