--- a/07-challenge-exercise.html
+++ b/07-challenge-exercise.html
@@ -16,7 +16,8 @@
   greet();
 
   function convertToFahrenheit(celsius){
-    let fahrenheit = (fahrenheit - 32) * 5 / 9;
+    let celsius= (fahrenheit - 32) * 5 / 9;
+    return celsius;
   }
 
   
