7f if-statements created with functions from prev exercises

--- a/07-challenge-exercise.html
+++ b/07-challenge-exercise.html
@@ -25,6 +25,18 @@
   }
   console.log(convertToCelsius(86))
 
+  function convertTemperature(degrees, unit){
+    if (unit = fahrenheit) {
+      celcius = convertToCelsius(fahrenheit)
+      console.log(celsius)
+    } else if (unit = celcius) {
+      fahrenheit = convertToFahrenheit(celcius)
+      console.log(fahrenheit)
+    }
+
+    
+  }
+
 </script>
 
 </body>
