7g function created successfully

--- a/07-challenge-exercises.html
+++ b/07-challenge-exercises.html
@@ -79,6 +79,11 @@
 
   <script>
     let calculation = '';
+
+    function updateCalculation(value) { 
+      calculation += value;
+      console.log(calculation);
+    }
   </script>
 </body>
 </html>
