--- a/07-challenge-2.html
+++ b/07-challenge-2.html
@@ -46,7 +46,11 @@ console.log(`Cart Quantity: ${cartQuantity}`);
 
   <script>
     let cartQuantity = 0;
-    
+
+    function updateCartQuantity(value) {
+      cartQuantity += value;
+      console.log(cartQuantity)
+    }
   </script>
 </body>
 </html>
