--- a/07-challenge-2.html
+++ b/07-challenge-2.html
@@ -32,6 +32,24 @@ updateCartQuantity(4);
 <button onclick="
   updateCartQuantity(5);
   ">+5</button>
+
+<button onclick="
+updateCartQuantity(-1);
+">Remove from cart</button>
+
+<button onclick="
+updateCartQuantity(-2);
+">-2</button>
+
+<button onclick="
+updateCartQuantity(-3);
+">-3</button>
+
+<button onclick="
+cartQuantity = 0;
+console.log('Cart was reset.');
+console.log(`Cart quantity: ${cartQuantity}`);
+">Reset Cart</button>
   
   <button onclick="
   cartQuantity = 0;
