--- a/08-objects.html
+++ b/08-objects.html
@@ -16,6 +16,11 @@
     console.log(product)
     console.log(product.name)
     console.log(product.price)
+
+    product.name = 'cotton socks';
+    console.log(product);
+
+    
   </script>
 </body>
 </html>
