--- a/08-objects.html
+++ b/08-objects.html
@@ -20,6 +20,11 @@
     product.name = 'cotton socks';
     console.log(product);
 
+    product.newProperty = true;
+    console.log(product);
+
+    delete product.newProperty;
+    console.log(product)
     
   </script>
 </body>
