--- a/08-rock-paper-scissors.html
+++ b/08-rock-paper-scissors.html
@@ -59,6 +59,14 @@
         }
       }
 
+      if (result === 'You win!') {
+        score.wins += 1;
+      } else if (result === 'You lose.') {
+        score.losses += 1;
+      } else if (result === 'Tie.') {
+        score.ties += 1;
+      }
+
       alert(`You picked ${playerMove}. Computer picked ${computerMove}. ${result}`);}
 
     function pickComputerMove(){
