--- a/08-rock-paper-scissors.html
+++ b/08-rock-paper-scissors.html
@@ -59,6 +59,7 @@
         }
       }
 
+//(NEW STEP ADDED BELOW) 
       if (result === 'You win!') {
         score.wins += 1;
       } else if (result === 'You lose.') {
@@ -66,6 +67,7 @@
       } else if (result === 'Tie.') {
         score.ties += 1;
       }
+// (NEW STEP ADDED ABOVE)
 
       alert(`You picked ${playerMove}. Computer picked ${computerMove}. ${result}`);}
 
@@ -83,6 +85,8 @@
 
     return computerMove;
   }
+
+  // Algorithm 1. Computer randomly selection a move, 2. Compare to get result, 3. Update a score (NEW STEP ADDED), 4. Display result and score in a popup
   </script>
 </body>
 </html>
