added score keep alert

--- a/08-rock-paper-scissors.html
+++ b/08-rock-paper-scissors.html
@@ -69,7 +69,9 @@
       }
 // (NEW STEP ADDED ABOVE)
 
-      alert(`You picked ${playerMove}. Computer picked ${computerMove}. ${result}`);}
+      alert(`You picked ${playerMove}. Computer picked ${computerMove}. ${result}
+      Wins: ${score.wins}, Losses: ${score.losses}, Ties: ${score.ties}`);
+    }
 
     function pickComputerMove(){
       const randomNumber = Math.random();
