added reset score button

--- a/08-rock-paper-scissors.html
+++ b/08-rock-paper-scissors.html
@@ -20,6 +20,12 @@
   playgame('scissors');
     ">Scissors</button>
 
+  <button onclick="
+    score.wins = 0;
+    score.losses = 0;
+    score.ties = 0;
+  ">Reset Score</button>
+
   <script>
     const score = {
       wins: 0, 
