--- a/08-objects.html
+++ b/08-objects.html
@@ -28,6 +28,23 @@
     console.log(product)
     */
 
+    const product2 = {
+      name: 'shirt',
+      'delivery-time': '1 day',
+      rating: {
+        stars: 4.5,
+        count: 87
+      }, 
+      fun: function function1() { 
+        console.log('function inside object')
+      }
+    };
+    console.log(product2);
+    console.log(product2.name)
+    console.log(product2['name'])
+    console.log(product2['delivery-time'])
+    console.log(product2.rating.count)
+    product2.fun()
   </script>
 </body>
 </html>
