--- a/08-objects.html
+++ b/08-objects.html
@@ -43,9 +43,14 @@
     console.log(product2.name)
     console.log(product2['name'])
     console.log(product2['delivery-time'])
+
     console.log(product2.rating.count)
     product2.fun()
-    
+
+    console.log(typeof console.log);
+
+    console.log(JSON.stringify(product2));
+
   </script>
 </body>
 </html>
