--- a/08-objects.html
+++ b/08-objects.html
@@ -51,6 +51,9 @@
 
     console.log(JSON.stringify(product2));
 
+    const jsonString = JSON.stringify(product2);
+    console.log(JSON.parse(jsonString));
+
   </script>
 </body>
 </html>
