Got some local storage work done

--- a/08-rock-paper-scissors.html
+++ b/08-rock-paper-scissors.html
@@ -33,6 +33,8 @@
       ties: 0
     }
 
+    console.log(localStorage.getItem('score'))
+
     function playgame(playerMove) {
       const computerMove = pickComputerMove() 
       let result = ''; 
@@ -73,6 +75,9 @@
       } else if (result === 'Tie.') {
         score.ties += 1;
       }
+
+      localStorage.setItem('score', JSON.stringify(score));
+
 
       alert(`You picked ${playerMove}. Computer picked ${computerMove}. ${result}
 Wins: ${score.wins}, Losses: ${score.losses}, Ties: ${score.ties}`);
