lesson objects work

--- a/08-rock-paper-scissors.html
+++ b/08-rock-paper-scissors.html
@@ -24,6 +24,7 @@
     score.wins = 0;
     score.losses = 0;
     score.ties = 0;
+    localStorage.removeItem('score');
   ">Reset Score</button>
 
   <script>
@@ -76,7 +77,7 @@
 
 
       alert(`You picked ${playerMove}. Computer picked ${computerMove}. ${result}
-Wins: ${score.wins}, Losses: ${score.losses}, Ties: ${score.ties}`);
+      Wins: ${score.wins}, Losses: ${score.losses}, Ties: ${score.ties}`);
     }
     // (NEW STEP ADDED ABOVE)
 
