--- a/GPT-heads-or-tails-final.html
+++ b/GPT-heads-or-tails-final.html
@@ -55,8 +55,8 @@
     <button onclick="guessResult('heads')">Heads</button>
     <button onclick="guessResult('tails')">Tails</button>
     <div class="result" id="result"></div>
-    <img id="coinImage" src="" alt="">
-    <img id="tailImage" src="" alt="">
+    <img id="coinImage" src="https://www.iconpacks.net/icons/1/free-coin-icon-794-thumb.png" alt="">
+    <img id="tailImage" src="https://img.freepik.com/premium-vector/fox-tail-icon-vector-template_598213-6508.jpg" alt="">
   </div>
   <script>
     function guessResult(guess) {
