cleaning up code and making it less long

--- a/08-rock-paper-scissors.html
+++ b/08-rock-paper-scissors.html
@@ -30,7 +30,7 @@
   <script>
     let score = JSON.parse(localStorage.getItem('score')) 
 
-    if (score === nul) {
+    if (!score) {
       score = {
         wins : 0,
         losses : 0,
