cleaned up the code

--- a/08-rock-paper-scissors.html
+++ b/08-rock-paper-scissors.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <p>Rock Paper Scissors</p>
+
   <button onclick="
   playgame('rock');
   ">Rock</button>
@@ -28,8 +29,12 @@
   ">Reset Score</button>
 
   <script>
-    let score = JSON.parse(localStorage.getItem('score')) 
-
+    let score = JSON.parse(localStorage.getItem('score')) || {
+        wins : 0,
+        losses : 0,
+        ties : 0
+      }
+/*
     if (!score) {
       score = {
         wins : 0,
@@ -37,7 +42,7 @@
         ties : 0
       }
     }
-
+*/
     console.log(JSON.parse(localStorage.getItem('score')))
 
     function playgame(playerMove) {
