--- a/09-dom.html
+++ b/09-dom.html
@@ -7,8 +7,11 @@
   <title>DOM</title>
 </head>
 <body>
+  <button>hello</button>
+
   <script>
-   
+   document.body.innerHTML = 'hello';
+   document.title = 'Good job!'
   </script>
 </body>
 </html>
