--- a/09-dom-projects.html
+++ b/09-dom-projects.html
@@ -7,17 +7,19 @@
   <title>DOM</title>
 </head>
 <body>
-  <button>hello</button>
+  <p>Youtube Subscribe Button</p>
+  <button onclick="
+  const buttonElement = document.querySelector('.js-subscribe-button')
+  
+  if (buttonElement.innerHTML === 'Subscribe') {
+    buttonElement.innerHTML = 'Subscribed'
+  } else {
+    buttonElement.innerHTML = 'Subscribe'
+  }
+  " class="js-subscribe-button">Subscribe</button>
 
   <script>
-
     
-/*
-   document.body.innerHTML = 'hello';
-   document.title = 'Good job!'
-   document.body.innerHTML = '<button>HELLO</button>' 
-   console.log(document.querySelector('button')) */
-
   </script>
 </body>
 </html>
