--- a/09-dom-projects.html
+++ b/09-dom-projects.html
@@ -8,18 +8,19 @@
 </head>
 <body>
   <p>Youtube Subscribe Button</p>
-  <button onclick="
-  const buttonElement = document.querySelector('.js-subscribe-button')
+  <button onclick=" subscribe()
+  " class="js-subscribe-button">Subscribe</button>
+
+  <script>
+    function subscribe() {
+      const buttonElement = document.querySelector('.js-subscribe-button')
   
   if (buttonElement.innerHTML === 'Subscribe') {
     buttonElement.innerHTML = 'Subscribed'
   } else {
     buttonElement.innerHTML = 'Subscribe'
   }
-  " class="js-subscribe-button">Subscribe</button>
-
-  <script>
-    
+    }
   </script>
 </body>
 </html>
