DOM edition rock paper scissors, display score on the screen

--- a/09-rock-paper-scissors.html
+++ b/09-rock-paper-scissors.html
@@ -21,6 +21,8 @@
   playgame('scissors');
     ">Scissors</button>
 
+  <p class="js-score"></p>
+
   <button onclick="
     score.wins = 0;
     score.losses = 0;
@@ -34,6 +36,9 @@
         losses : 0,
         ties : 0
       }
+
+      document.querySelector('.js-score')
+        .innerHTML = `Wins: ${score.wins}, Losses: ${score.losses}, Ties: ${score.ties})`;
 /*
     if (!score) {
       score = {
