Changed the display for the moves and results

--- a/09-rock-paper-scissors.html
+++ b/09-rock-paper-scissors.html
@@ -97,7 +97,7 @@
 
       updateScoreElement();
 
-      document.querySelector('.js-result').innerHTML = `${result}`
+      document.querySelector('.js-result').innerHTML = result
       document.querySelector('.js-moves').innerHTML = `You ${playerMove} - ${computerMove} Computer`
 
     
