--- a/09-dom-projects.html
+++ b/09-dom-projects.html
@@ -21,7 +21,7 @@
   <script>
     function calculateTotal() {
       const inputElement = document.querySelector('.js-cost-input')
-      let cost = inputElement.value;
+      let cost = Number(inputElement.value);
 
       if (cost < 40) {
     cost = cost + 10;
