--- a/09-dom-projects.html
+++ b/09-dom-projects.html
@@ -12,13 +12,18 @@
   " class="js-subscribe-button">Subscribe</button>
 
   <p>Amazon Shipping Calculator</p>
-  <input placeholder="Cost of order" class="js-cost-input">
+  <input placeholder="Cost of order" class="js-cost-input" onkeydown="
+    console.log(event.key);
+    if (event.key === 'Enter') {
+        calculateTotal()
+      }">
   <button onclick="
     calculateTotal()
   ">Calculate</button>
   <p class="js-total-cost"></p>
 
   <script>
+
     function calculateTotal() {
       const inputElement = document.querySelector('.js-cost-input')
       let cost = Number(inputElement.value);
