--- a/08-objects.html
+++ b/08-objects.html
@@ -39,6 +39,7 @@
         console.log('function inside object')
       }
     };
+/*
     console.log(product2);
     console.log(product2.name)
     console.log(product2['name'])
@@ -53,6 +54,18 @@
 
     const jsonString = JSON.stringify(product2);
     console.log(JSON.parse(jsonString));
+*/
+    
+    const product3 = {
+      name: 'basketball',
+      price: '2950',
+     }
+     console.log(product3)
+     product3.price = 2950 + 500;
+
+     product3['delivery-time'] = '3 days'
+     console.log(product3)
+     
 
   </script>
 </body>
