--- a/10-dom-projects.html
+++ b/10-dom-projects.html
@@ -6,15 +6,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DOM</title>
   <style>
-    button {
-      
+    .subscribe-button {
+      border: none;
+      background-color: black;
+      color: white;
+      padding: 10px 15px;
+      font-weight: bold;
+      border-radius: 50px;
+      cursor: pointer;
+    }
+
+    .is-subscribed {
+      background-color: gray;
+      color: black;
     }
   </style>
 </head>
 <body>
   <p>Youtube Subscribe Button</p>
   <button onclick=" subscribe()
-  " class="js-subscribe-button">Subscribe</button>
+  " class="js-subscribe-button subscribe-button">Subscribe</button>
 
   <p>Amazon Shipping Calculator</p>
   <input placeholder="Cost of order" class="js-cost-input" onkeydown="
@@ -49,8 +60,10 @@
   
   if (buttonElement.innerHTML === 'Subscribe') {
     buttonElement.innerHTML = 'Subscribed'
+    buttonElement.classList.add('is-subscribed')
   } else {
     buttonElement.innerHTML = 'Subscribe'
+    buttonElement.classList.remove('is-subscribed')
   }
     }
   </script>
