--- a/10-dom-projects.html
+++ b/10-dom-projects.html
@@ -17,7 +17,7 @@
     }
 
     .is-subscribed {
-      background-color: gray;
+      background-color: rgb(240, 240, 240);
       color: black;
     }
   </style>
