--- a/10-rock-paper-scissors.html
+++ b/10-rock-paper-scissors.html
@@ -30,6 +30,12 @@
       margin-right: 10px;
       cursor: pointer;
     }
+
+    .result {
+      font-size: 25px;
+      font-weight: bold;
+      margin-top: 50px;
+    }
   </style>
 </head>
 <body>
@@ -47,7 +53,7 @@
   playgame('scissors');
   " class="move-button"><img src="./rock-paper-scissors-assets/scissors-emoji.png" alt="Scissors emoji" class="emojis"></button>
 
-  <p class="js-result"></p>
+  <p class="js-result result">You Win</p>
   <p class="js-moves"></p>
   <p class="js-score"></p>
 
