--- a/10-rock-paper-scissors.html
+++ b/10-rock-paper-scissors.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rock Paper Scissors</title>
-  <link rel="stylesheet" href="10-rock-paper-scissors.css">
+  <link rel="stylesheet" href="styles/10-rock-paper-scissors.css">
 </head>
 <body>
   <p class="title">Rock Paper Scissors</p>
@@ -34,6 +34,6 @@
     updateScoreElement()
   " class="reset-score-button">Reset Score</button>
 
-  <script src="10-rock-paper-scissors.js">
+  <script src="scripts/10-rock-paper-scissors.js"></script>
 </body>
 </html>
