--- a/10-exercises.html
+++ b/10-exercises.html
@@ -15,8 +15,19 @@
     padding: 5px 40px;
     cursor: pointer;
   }
+
+  .uber-button-1 {
+    background-color: black;
+    color: white;
+    padding: 7px 16px;
+    font-size: 16px;
+    border-radius: 8px;
+  }
 </style>
 <body>
   <button class="amazon-button">Add to Cart</button>
+<br>
+  <button class="uber-button-1">Request now</button>
+  <button class="uber-button-2">Schedule for later</button>
 </body>
 </html>
