--- a/10-exercises.html
+++ b/10-exercises.html
@@ -6,28 +6,27 @@
   <title>Document</title>
 </head>
 <style>
-  .amazon-button {
-    background-color: rgb(255, 216, 20);
-    color: black;
-    font-size: 18px;
-    border: none;
-    border-radius: 20px;
-    padding: 5px 40px;
-    cursor: pointer;
-  }
+ .gaming-btn {
+  background-color: rgb(230, 230, 230);
+  color: black;
+  font-size: 18px;
+  padding: 6px 18px;
+  border: none;
+  border-radius: 7px;
+ }
 
-  .uber-button-1 {
-    background-color: black;
-    color: white;
-    padding: 7px 16px;
-    font-size: 16px;
-    border-radius: 8px;
-  }
+ .is-toggled {
+  background-color: black;
+  color: white;
+ }
 </style>
 <body>
-  <button class="amazon-button">Add to Cart</button>
-<br>
-  <button class="uber-button-1">Request now</button>
-  <button class="uber-button-2">Schedule for later</button>
+<button onclick="
+  const button = document.querySelector('js-button');
+  if button 
+  " class="js-button gaming-btn">Gaming</button>
+
+  <script>
+  </script>
 </body>
 </html>
