--- a/10-exercises.html
+++ b/10-exercises.html
@@ -23,7 +23,11 @@
 <body>
 <button onclick="
   const button = document.querySelector('js-button');
-  if button 
+  if (button.classList.contains('is-toggled')) {
+    button.classList.remove('is-toggled')
+  } else {
+    button.classList.add('is-toggled')
+  }
   " class="js-button gaming-btn">Gaming</button>
 
   <script>
