--- a/10-exercises.html
+++ b/10-exercises.html
@@ -6,7 +6,7 @@
   <title>Document</title>
 </head>
 <style>
- .gaming-btn {
+ button {
   background-color: rgb(230, 230, 230);
   color: black;
   font-size: 18px;
@@ -29,7 +29,25 @@
   } else {
     button.classList.add('is-toggled')
   }
-  " class="js-button gaming-btn">Gaming</button>
+  " class="js-button">Gaming</button>
+
+<button onclick="
+const button2 = document.querySelector('.js-button-2');
+if (button2.classList.contains('is-toggled')) {
+  button2.classList.remove('is-toggled')
+} else {
+  button2.classList.add('is-toggled')
+}
+" class="js-button-2">Music</button>
+
+<button onclick="
+const button3 = document.querySelector('.js-button-3');
+if (button3.classList.contains('is-toggled')) {
+  button3.classList.remove('is-toggled')
+} else {
+  button3.classList.add('is-toggled')
+}
+" class="js-button-3">Tech</button>
 
   <script>
   </script>
