Added function to reuse in code with parameter for classes

--- a/10-exercises.html
+++ b/10-exercises.html
@@ -5,51 +5,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
 </head>
-<style>
- button {
-  background-color: rgb(230, 230, 230);
-  color: black;
-  font-size: 18px;
-  padding: 6px 18px;
-  border: none;
-  border-radius: 7px;
-  cursor: pointer;
- }
-
- .is-toggled {
-  background-color: black;
-  color: white;
- }
-</style>
+<link rel="stylesheet" href="10-f .css">
 <body>
 <button onclick="
-  const button = document.querySelector('.js-button');
-  if (button.classList.contains('is-toggled')) {
-    button.classList.remove('is-toggled')
-  } else {
-    button.classList.add('is-toggled')
-  }
+toggleButton('.js-button')
   " class="js-button">Gaming</button>
 
 <button onclick="
-const button2 = document.querySelector('.js-button-2');
-if (button2.classList.contains('is-toggled')) {
-  button2.classList.remove('is-toggled')
-} else {
-  button2.classList.add('is-toggled')
-}
+toggleButton('.js-button-2')
 " class="js-button-2">Music</button>
 
 <button onclick="
-const button3 = document.querySelector('.js-button-3');
-if (button3.classList.contains('is-toggled')) {
-  button3.classList.remove('is-toggled')
-} else {
-  button3.classList.add('is-toggled')
-}
-" class="js-button-3">Tech</button>
+toggleButton('.js-button-3')" class="js-button-3">Tech</button>
 
-  <script>
-  </script>
+  <script src="10-f.js"></script>
 </body>
 </html>
