--- a/11-arrays-and-loops.html
+++ b/11-arrays-and-loops.html
@@ -1,91 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DOM</title>
-  <style>  
-  body {
-      font-family: Arial;
-    }
-
-    .subscribe-button {
-      border: none;
-      background-color: black;
-      color: white;
-      padding: 10px 15px;
-      font-weight: bold;
-      border-radius: 50px;
-      cursor: pointer;
-      margin-bottom: 30px;
-    }
-
-    .is-subscribed {
-      background-color: rgb(240, 240, 240);
-      color: black;
-    }
-
-    .cost-input {
-      font-size: 15px;
-      padding: 10px;
-    }
-
-    .calculate-button {
-      background-color: green;
-      color: white;
-      border: none;
-      font-size: 15px;
-      padding: 12px 15px;
-      cursor: pointer;
-    }
-
-  </style>
+  <title>Arrays and loops</title>
 </head>
 <body>
-  <p>Youtube Subscribe Button</p>
-  <button onclick=" subscribe()
-  " class="js-subscribe-button subscribe-button">Subscribe</button>
-
-  <p>Amazon Shipping Calculator</p>
-  <input placeholder="Cost of order" class="js-cost-input cost-input" onkeydown="
-   handleCostKeyDown(event)
-    ">
+  <p>Todo List Practice 1</p>
+  <input type="text" placeholder="Todo name" class="js-input">
   <button onclick="
-    calculateTotal()
-  " class="calculate-button">Calculate</button>
-  <p class="js-total-cost"></p>
+  const listItem = document.querySelector('.js-input')
+  let toDoList = ['']
+  
+  " class="js-button">Add</button>
 
   <script>
-    function handleCostKeyDown(event) {
-      if (event.key === 'Enter') {
-        calculateTotal()
-      }
-    }
-
-    function calculateTotal() {
-      const inputElement = document.querySelector('.js-cost-input')
-      let cost = Number(inputElement.value);
-
-      if (cost < 40) {
-    cost = cost + 10;
-  } 
-
-    document.querySelector('.js-total-cost')
-      .innerHTML = `$${cost}`;
-    }
-
-    function subscribe() {
-      const buttonElement = document.querySelector('.js-subscribe-button')
-  
-  if (buttonElement.innerHTML === 'Subscribe') {
-    buttonElement.innerHTML = 'Subscribed'
-    buttonElement.classList.add('is-subscribed')
-  } else {
-    buttonElement.innerHTML = 'Subscribe'
-    buttonElement.classList.remove('is-subscribed')
-  }
-    }
+      let toDoList = ['']
+    console.log(Array.isArray(toDoList))
   </script>
 </body>
 </html>
