Createedalgoryhtm to take input and put it in the list array and console log it

--- a/11-arrays-and-loops.html
+++ b/11-arrays-and-loops.html
@@ -9,12 +9,12 @@
   <button onclick="
   const listItem = document.querySelector('.js-input')
   let toDoList = ['']
-  
+  toDoList.push(listItem);
+  console.log(toDoList)
   " class="js-button">Add</button>
 
   <script>
-      let toDoList = ['']
-    console.log(Array.isArray(toDoList))
+
   </script>
 </body>
 </html>
