Got the name properly

--- a/11-arrays-and-loops.html
+++ b/11-arrays-and-loops.html
@@ -5,15 +5,17 @@
 </head>
 <body>
   <p>Todo List Practice 1</p>
-  <input type="text" placeholder="Todo name">
+  <input type="text" placeholder="Todo name" class="js-name-input">
   <button onclick=" 
   addTodo()
-  " class="js-name-input">Add</button>
+  ">Add</button>
 
   <script>
     const todoList = [];
     function addTodo() {
       const inputElement = document.querySelector('.js-name-input')
+      const name = inputElement.value;
+      console.log(name)
     }
   </script>
 </body>
