--- a/11-arrays-and-loops.html
+++ b/11-arrays-and-loops.html
@@ -15,7 +15,8 @@
     function addTodo() {
       const inputElement = document.querySelector('.js-name-input')
       const name = inputElement.value;
-      console.log(name)
+      todoList.push(name)
+      console.log(todoList)
     }
   </script>
 </body>
