Made input value blank after submission

--- a/11-arrays-and-loops.html
+++ b/11-arrays-and-loops.html
@@ -17,6 +17,7 @@
       const name = inputElement.value;
       todoList.push(name)
       console.log(todoList)
+      inputElement.value = ''
     }
   </script>
 </body>
