--- a/11-arrays-and-loops.html
+++ b/11-arrays-and-loops.html
@@ -20,18 +20,26 @@
       inputElement.value = ''
     }
 
-  */ 
-
   const todoList = [
     'make dinner',
     'wash dishes',
     'watch youtube'
   ]
 
-  for (let index = 0; index <= todoList.length - 1; index++) {
-    const value = todoList[index]
+  for (let i = 0; i < todoList.length; i++) {
+    const value = todoList[i]
     console.log(value)
+  }  */ 
+
+  const nums = [1, 1, 3];
+  let total = 0;
+
+  for (let i = 0; i < nums.length; i++) {
+    const num = nums[i]
+    total += num
   }
+  console.log(total)
+  
   </script>
 </body>
 </html>
