--- a/11-arrays-and-loops.html
+++ b/11-arrays-and-loops.html
@@ -11,7 +11,13 @@
   ">Add</button>
 
   <script>
-   /* const todoList = [];
+   const todoList = ['Do my bed', 'Get ready'];
+    
+   for (let i = 0; i < todoList.length; i++) {
+    const todo = todoList[i];
+    const html = `<p>${todo}</p>`
+   }
+
     function addTodo() {
       const inputElement = document.querySelector('.js-name-input')
       const name = inputElement.value;
@@ -20,6 +26,8 @@
       inputElement.value = ''
     }
 
+
+/* 
   const todoList = [
     'make dinner',
     'wash dishes',
@@ -29,7 +37,7 @@
   for (let i = 0; i < todoList.length; i++) {
     const value = todoList[i]
     console.log(value)
-  }  */ 
+  }  
 
   const nums = [1, 1, 3];
   let total = 0;
@@ -39,7 +47,7 @@
     total += num
   }
   console.log(total)
-  
+*/ 
   </script>
 </body>
 </html>
