Stored algorythm for list items going into div displayed on to page into a function

--- a/11-arrays-and-loops.html
+++ b/11-arrays-and-loops.html
@@ -10,20 +10,34 @@
   addTodo()
   ">Add</button>
 
+  <div class="js-todo-list"></div>
+
   <script>
    const todoList = ['Do my bed', 'Get ready'];
-    
-   for (let i = 0; i < todoList.length; i++) {
-    const todo = todoList[i];
-    const html = `<p>${todo}</p>`
-   }
 
-    function addTodo() {
-      const inputElement = document.querySelector('.js-name-input')
-      const name = inputElement.value;
-      todoList.push(name)
-      console.log(todoList)
-      inputElement.value = ''
+    renderTodoList()
+
+   function renderTodoList() {
+      let todoListHTML = '';
+      
+      for (let i = 0; i < todoList.length; i++) {
+      const todo = todoList[i];
+      const html = `<p>${todo}</p>`
+      todoListHTML += html
+      }
+  
+      console.log(todoListHTML)
+  
+      document.querySelector('.js-todo-list').innerHTML = todoListHTML
+  
+      }
+
+      function addTodo() {
+        const inputElement = document.querySelector('.js-name-input')
+        const name = inputElement.value;
+        todoList.push(name)
+        console.log(todoList)
+        inputElement.value = ''
     }
 
 
