--- a/11-arrays-and-loops.html
+++ b/11-arrays-and-loops.html
@@ -23,7 +23,10 @@
       for (let i = 0; i < todoList.length; i++) {
       const todo = todoList[i];
       const html = `<p>
-        ${todo} <button>Delete</button>
+        ${todo} <button onclick="
+        todoList.splice(${i}, 1);
+        renderTodoList()
+        ">Delete</button>
         </p>`
       todoListHTML += html
       }
