--- a/11-arrays-and-loops.html
+++ b/11-arrays-and-loops.html
@@ -27,9 +27,10 @@
       let todoListHTML = '';
       
       for (let i = 0; i < todoList.length; i++) {
-      const todo = todoList[i];
+      const todoObject = todoList[i];
+      const {name, dueDate} = todoObject
       const html = `<p>
-        ${todo} <button onclick="
+        ${name} ${dueDate} <button onclick="
         todoList.splice(${i}, 1);
         renderTodoList()
         ">Delete</button>
