--- a/11-arrays-and-loops.html
+++ b/11-arrays-and-loops.html
@@ -6,7 +6,7 @@
 <body>
   <p>Todo List Practice 1</p>
   <input type="text" placeholder="Todo name" class="js-name-input">
-  <input type="date">
+  <input type="date"class="js-due-date-input">
   <button onclick=" 
   addTodo()
   ">Add</button>
@@ -47,8 +47,16 @@
       function addTodo() {
         const inputElement = document.querySelector('.js-name-input')
         const name = inputElement.value;
-        todoList.push(name)
+
+        const dateInputElement = document.querySelector('.js-due-date-input')
+        const dueDate = dateInputElement.value
+
+        todoList.push({
+          name, 
+          dueDate
+        })
         console.log(todoList)
+
         inputElement.value = ''
 
         renderTodoList()
