Completed to do list date functionality

--- a/11-arrays-and-loops.html
+++ b/11-arrays-and-loops.html
@@ -3,6 +3,9 @@
 <head>
   <title>Arrays and loops</title>
 </head>
+<style>
+  
+</style>
 <body>
   <p>Todo List Practice 1</p>
   <input type="text" placeholder="Todo name" class="js-name-input">
@@ -38,8 +41,6 @@
       todoListHTML += html
       }
   
-      console.log(todoListHTML)
-  
       document.querySelector('.js-todo-list').innerHTML = todoListHTML
   
       }
@@ -55,7 +56,6 @@
           name, 
           dueDate
         })
-        console.log(todoList)
 
         inputElement.value = ''
 
